# fv-chat

./: README.md
backend/: README.md  docker-compose.yml  pyproject.toml  setup.sql
backend/backend/: api.py  database.py  main.py  middleware.py  models.py  websocket.py
frontend/: README.md  app.vue  nuxt.config.js  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/pages/: index.vue
frontend/src/: App.vue  style.css
frontend/src/components/: MessageList.vue  UserForm.vue
